公職人員選舉罷免法 1991.7.16

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -1,10 +1,12 @@
-* 1 動員戡亂時期公職人員選舉、罷免，依本法之規定。本法未規定者，依其他有關法令之規定。
+* 1 公職人員選舉、罷免，依本法之規定。本法未規定者，依其他有關法令之規定。
+
+> 釋：為因應動員戡亂時期之終止及臨時條款之廢止，爰將本條文中「動員戡亂時期」文字刪除。
 
 * 2 本法所稱公職人員，指左列人員：一、中央公職人員：國民大會代表、立法院立法委員、監察院監察委員。二、地方公職人員：省（市）議會議員，縣（市）議會議員，鄉（鎮、市）民代表會代表，縣（市）長，鄉（鎮、市）長，村、里長。
 
-* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。但監察委員選舉，由省（市）議會議員以無記名限制連記投票法行之，其連記人數以不超過應選名額三分之一為限。公職人員罷免，由原選舉區之選舉人以無記名投票法決定之。
+* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。但監察委員選舉，由省（市）議會議員以無記名限制連記投票法行之；其連記人數，以不超過應選名額三分之一為限。中央公職人員全國不分區、僑居國外國民之選舉，採政黨比例方式選出之。公職人員罷免，由原選舉區之選舉人以無記名投票法決定之。
 
-> 釋：第一項「名額二分之一」修正為「三分之一」。
+> 釋：一、增列第二項，配合憲法增修條文規定，明定中央公職人員全國不分區、僑居國外國民選舉，採政黨比例方式選出之。二、原第二項移列為第三項。
 
 * 4 選舉人、候選人年齡及居住期間之計算，均以算至投票日前一日為準，並以戶籍登記簿為依據。前項居住期間之起算，以申報戶籍遷入登記之申請日期為準。重行投票者，仍依原投票日計算。
 
@@ -18,15 +20,17 @@
 
 > 釋：一、第一項至第三項未修正。二、第四項文字修正。三、第五項將「中央」修正為「上級」俾兼顧省選舉委員會之監督職權。四、增列第六項，明定辦理選舉期間，直轄市、縣（市）選舉委員會並於鄉（鎮、市、區）設辦理選務單位，以應作業之需要。
 
-* 8 中央選舉委員會隸屬行政院，置委員若干人；其具有同一黨籍者，不得超過委員總額二分之一。委員之任命，由行政院院長提請總統派充之，並指定一人為主任委員。其組織規程由行政院擬定，呈請總統核定之。省（市）選舉委員會隸屬中央選舉委員會，各置委員若干人，由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會隸屬省選舉委員會，各置委員若干人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定之。各級選舉委員會，應依據法令公正行使職權。
+* 8 中央選舉委員會隸屬行政院，置委員若干人，由行政院院長提請總統派充之，並指定一人為主任委員；其組織規程，由行政院擬定，呈請總統核定之。省（市）選舉委員會隸屬中央選舉委員會，各置委員若干人，由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會隸屬省選舉委員會，各置委員若干人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定。各選舉委員會委員，應有無黨籍人士；其具有同一黨籍者，在中央選舉委員會不得超過委員總額五分之二，在省（市）、縣（市）選舉委員會不得超過各該選舉委員會委員總額二分之一。各級選舉委員會，應依據法令公正行使職權。
 
-> 釋：一、將各級選舉委員會人數修正為「若干人，」並增「其具有同一黨籍者，不得超過委員總額二分之一。委員之任命，」等語。且於各該選舉委員會組織規程中明定其委員人數、無給職及任期等規定，以保持組織架構之彈性。二、明定省（市）選舉委員會隸屬中央選舉委員會，縣（市）選舉委員會隸屬省選舉委員會，以確立地位保持其公正性。三、第一項至第三項，依照前述理由予以修正。
+> 釋：一、第一項配合第五項之增列酌作文字修正。二、為增進選舉委員會公正超然性，增列第五項明定各選舉委員會應有無黨籍人士及其委員具有同一黨籍者之名額限制。
 
 * 9 公職人員罷免，由各級選舉委員會辦理，並準用第七條之規定。
 
 * 10 各級選舉委員會在辦理選舉、罷免期間，得調用各級政府職員辦理事務。
 
-* 11 各級選舉委員會分別掌理左列事項：一、選舉、罷免公告事項。二、選舉、罷免事務進行程序及計畫事項。三、候選人資格之審定事項。四、選舉宣導之策劃事項。五、選舉、罷免之監察事項。六、投票所、開票所之設置及管理事理。七、選舉、罷免結果之審查事項。八、當選證書之製發事項。九、其他有關選舉、罷免事項。
+* 11 各級選舉委員會分別掌理左列事項：一、選舉、罷免公告事項。二、選舉、罷免事務進行程序及計畫事項。三、候選人資格之審定事項。四、選舉宣導之策劃事項。五、選舉、罷免之監察事項。六、投票所、開票所之設置及管理事項。七、選舉、罷免結果之審查事項。八、當選證書之製發事項。九、訂定政黨使用電視及其他大眾傳播工具從事競選宣傳活動之辦法。十、其他有關選舉、罷免事項。
+
+> 釋：一、將現行法第九款改列第十款。二、第九款則明定政黨使用大眾傳播工具從事競選宣傳活動之法令依據。
 
 * 12 中央選舉委員會置巡迴監察員若干人，由中央選舉委員會遴選具有選舉權之公正人士，報請行政院院長聘任，並指定一人為召集人；直轄市、縣（市）選舉委員會各設監察小組，置小組委員若干人，由直轄市選舉委員會及縣（市）選舉委員會，分別遴選具有選舉權之公正人士，報請中央選舉委員會及省選舉委員會聘任，並各指定一人為召集人，執行左列事項：一、候選人、助選員、罷免案提議人、被罷免人違反選舉、罷免法規之監察事項。二、選舉人、罷免案投票人違反選舉、罷免法規之監察事項。三、辦理選舉、罷免事務人員違法之監察事項。四、其他有關選舉、罷免監察事項。前項巡迴監察員、監察小組委員，均為無給職。其任期及人數於中央、直轄市、縣（市）選舉委員會組織規程規定之。直轄市、縣（市）選舉委員會，得遴聘具有選舉權之公正人士為政見發表會監察員，執行有關政見發表之監察事項。各級選舉委員會執行監察職務準則，由中央選舉委員會定之。
 
@@ -36,45 +40,61 @@
 
 * 14 中華民國國民，年滿二十歲，無左列情事之一者，有選舉權：一、褫奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。
 
-* 15 有選舉權人在其本籍或在各該選舉區繼續居住六個月以上者，為公職人員區域選舉各該選舉區之選舉人。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。第一項之居住期間，於直轄市、縣（市）、鄉（鎮、市）地方公職人員之選舉，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉公告發布後，遷入各該選舉區者，無選舉投票權。
+* 15 有選舉權人在各該選舉區繼續居住六個月以上者，為公職人員選舉各該選舉區之選舉人。前項之居住期間，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉公告發布後，遷入各該選舉區者，無選舉投票權。
 
-> 釋：鑒於第三項但書「但於選舉區公告後，遷入各該選舉區者，無選舉投票權。」所稱之「選舉區公告」，係指第四十三條第一項第一款「選舉公告」中所載明「選舉區之劃分」而言。並不包括第四十二條但書「但選舉區有變更時，應於公職人員任期或規定之日期屆滿六個月前發布」之變更選舉區之公告。為避免產生疑義，爰將本項但書所定「於選舉區公告後」修正為「於選舉公告發布後」。
+> 釋：一、現代社會工商發達，人民遷徙頻繁，爰參照各國選舉法規，刪除「本籍」而改以「居住期間」為取得選舉人資格之要件。同時配合職婦團體選舉之廢止，爰刪除「區域」二字。二、第二項配合第一項修正，予以刪除。三、第三項移列第二項，並為使各種公職人員選舉居住期間之計算標準一致，爰刪除「於直轄市、縣（市）、鄉（鎮、市）地方公職人員之選舉」等字。
 
-* 16 生活習慣特殊國民公職人員選舉，以生活習慣特殊並具有前條資格之有選舉權人為選舉人。職業團體、婦女團體公職人員選舉，以入會滿六個月以上並具有前條資格之有選舉權人為選舉人。監察委員選舉，以省（市）議會議員為選舉人。
+* 16 山胞公職人員選舉，以具有山胞身分並有前條資格之有選舉權人為選舉人。監察委員選舉，以省（市）議會議員為選舉人。
 
-* 17 有選舉權人對同一種類之選舉具有二個以上選舉人資格者，應擇一行使選舉權。
+> 釋：一、第一項參照憲法增修條文規定，將「生活習慣特殊國民」修正為「山胞」並將「生活習慣特殊」修正為「具有山胞身份」。二、配合職婦團體選舉之廢止，刪除第二項。三、原第三項移列第二項。
 
-* 18 有選舉權人選擇行使選舉權，依左列規定：一、具有居住地與本籍地選舉人資格者，除於投票日二十五日前，向其本籍地之鄉（鎮、市、區）戶籍機關聲明者，得返回其本籍地行使選舉權外，應在其居住地行使。二、具有職業團體或婦女團體及區域選舉人資格者，除於投票日六十日前，向其所屬團體聲明參加區域選舉者外，應參加各該職業團體或婦女團體選舉。三、具有職業團體及婦女團體選舉人資格者，除於投票日六十日前，向其所屬職業團體聲明參加職業團體選舉者外，應參加婦女團體選舉。四、具有兩個職業團體以上選舉人資格者，應於投票日六十日前，向其所願參加選舉之團體聲明參加該團體選舉，並通知所屬其他團體；不聲明者，應參加先列入之團體選舉。同一日期加入二個以上團體者，應參加區域選舉。五、生活習慣特殊國民具有職業團體或婦女團體選舉人資格者，除於投票日六十日前，向其所屬之職業團體或婦女團體聲明參加該團體選舉者外，應參加生活習慣特殊國民選舉。前項各款之聲明，均應以書面為之。
+* 17 （刪除）
 
-* 19 職業團體或婦女團體選舉人，在投票日二十日前喪失其會員資格者，不得參加職業團體或婦女團體選舉。但得依規定參加區域或生活習慣特殊國民選舉。
+> 釋：配合職婦團體選舉之廢止及第十五條廢除本籍之適用，爰刪除本條。
 
-* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。職業團體、婦女團體選舉人或投票所工作人員，得在戶籍地或工作地之投票所投票。但職業團體、婦女團體選舉人欲在工作地投票者，應於投票日六十日前，以書面向所屬團體聲明之。二種以上公職人員選舉同時辦理時，依規定選擇行使選舉權者，以在同一投票所投票為限。聲明在工作地投票者，亦同。監察委員選舉人，應在省（市）議會舉行之選舉會所設之投票所投票。
+* 18 （刪除）
 
-> 釋：選舉人投票當日，憑身分證領票一次，並在身分證上只能蓋一個領票戳記，為維持選舉投票秩序，以在同一地投票所投票為限。爰增列第三項。
+> 釋：配合職婦團體選舉之廢止及第十五條廢除本籍之適用，爰刪除本條。
+
+* 19 （刪除）
+
+> 釋：配合職婦團體選舉之廢止，爰刪除本條。
+
+* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。投票所工作人員，得在戶籍地或工作地之投票所投票。監察委員選舉人，應在省（市）議會舉行之選舉會所設之投票所投票。
+
+> 釋：一、配合職婦團體選舉之廢止，爰修正第二項。二、配合第十五條刪除本籍之規定刪除第三項。並將第四項移列第三項。
 
 * 21 選舉人投票時，應憑本人國民身分證領取選舉票。監察委員選舉人應憑議員身分證明領取選舉票。
 
 * 22 選舉人應於規定之投票時間內到投票所投票；逾時不得進入投票所。但已於規定時間內到達投票所尚未投票者，仍可投票。
 
-* 23 區域選舉人名冊，由鄉（鎮、市、區）戶籍機關依據戶籍登記簿編造，凡投票前二十日已登錄戶籍登記簿，依規定有選舉權者，應一律編入名冊；投票日前二十日以後遷出或除籍之選舉人，仍應在原選舉區行使選舉權。
+* 23 選舉人名冊，由鄉（鎮、市、區）戶籍機關依據戶籍登記簿編造；凡投票前二十日已登錄戶籍登記簿，依規定有選舉人資格者，應一律編入名冊；投票日前二十日以後遷出之選舉人，仍應在原選舉區行使選舉權。
 
-* 24 職業團體或婦女團體選舉人名冊，應以各該團體造報之會員名冊為準，由戶籍機關依前條規定編造。投票日前二十日以後喪失會員資格之選舉人，仍應在原團體行使選舉權。職業團體或婦女團體選舉人聲明在工作地投票者，應另行編造工作地投票選舉人名冊。
+> 釋：一、有選舉權者需符合第十五條規定具備選舉人資格者才予列入選舉人名冊，爰將「有選舉權者」修正為「有選舉人資格者」。二、配合第十五條修正，將「區域」「或除籍」等字刪除。
 
-* 25 生活習慣特殊國民選舉人名冊，其生活習慣特殊國民身分之認定，以戶籍登記簿為準，由戶籍機關依第二十三條之規定編造。
+* 24 （刪除）
+
+> 釋：配合職婦團體選舉之廢止，爰刪除本條。
+
+* 25 山胞選舉人名冊，其山胞身分之認定，以戶籍登記簿為準，由戶籍機關依第二十三條之規定編造。
+
+> 釋：配合憲法增修條文之用語，將原「生活習慣特殊國民」修正為「山胞」。
 
 * 26 二種以上公職人員選舉同時辦理時，選舉人名冊得視實際需要分別或合併編造。
 
 * 27 監察委員選舉人名冊，由省（市）政府民政廳（局）依據省（市）議會議員名冊編造。
 
-* 28 職業團體或婦女團體會員名冊，由各該團體編造，並應於投票日五十日前，在各該團體辦公處所公告五日，供會員閱覽；會員如發現錯誤或遺漏時，得於閱覽期內申請更正。
+* 28 （刪除）
+
+> 釋：配合職婦團體選舉之廢止，爰刪除本條。
 
 * 29 選舉人名冊編造後，戶籍機關應送由鄉（鎮、市、區）公所函報直轄市、縣（市）選舉委員會備查；並應交村、里在村、里辦公處分鄰公開陳列、公告閱覽五日。選舉人發現錯誤或遺漏時，得於閱覽期內申請更正。
 
 * 30 選舉人名冊經公開陳列、公告閱讀期滿後，村、里長應即將原冊暨申請更正情形，報由鄉（鎮、市、區）公所轉送戶籍機關查核更正。選舉人名冊經公告更正後即為確定，並由各直轄市、縣（市）選舉委員會公告選舉人人數。
 
-* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區內登記為公職人員候選人。但縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六歲。有選舉權人滿三十五歲，在其本籍或在各該省（市）行政區域內繼續居住六個月以上者，得登記為監察委員候選人。回復中華民國國籍滿三年或因歸化取得中華民國國籍滿十年者，得依前二項規定登記為候選人。
+* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區或其本籍地登記為公職人員候選人。但縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六歲。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。有選舉權人年滿三十五歲，在各該省（市）行政區域內繼續居住六個月以上者，得於該省（市）或其本籍地，登記為監察委員候選人。選舉人年滿二十三歲，得由依法設立之政黨登記為中央公職人員全國不分區選舉之候選人。但監察委員候選人須年滿三十五歲。僑居國外之中華民國國民年滿二十三歲，在國外繼續僑居八年以上，得由依法設立之政黨登記為中央公職人員僑居國外國民選舉之候選人。但監察委員候選人須年滿三十五歲。政黨登記之全國不分區、僑居國外國民選舉候選人，應為該黨黨員，並經各該候選人書面同意；其候選人名單應以書面為之，並排列次序。回復中華民國國籍三年或因歸化取得中華民國國籍滿十年者，得依第一項、第三項至第六項規定登記為候選人。選舉人在本籍地登記為候選人者，應於本籍地行使選舉投票權。
 
-> 釋：一、於第一項增訂候選人之登記以其行使選舉權之選舉區為限。且將「二十五歲」修正為「二十六歲」。二、鑒於監察委員之候選人，並不限於監察委員選舉之選舉人，故將其自第一項移出，專列為第二項，並明定其要件。三、原第二項改為第三項，並作文字修正。
+> 釋：一、第一項規定選舉人，符合候選人年齡規定，得於其行使選舉權之選舉區或其本籍地登記為候選人，使選舉人得返回本籍地參選，服務鄉梓。二、參考現行選舉罷免法第十五條第二項之規定，增訂第二項，明定本籍之規定，不適用於鄉（鎮、市、區）以下之基層地方公職人員選舉。三、原第二項移列為第三項並酌作文字修正。四、增列第四項、明定全國不分區選舉候選人之條件，並規定由政黨提出登記，俾配合憲法增修條文規定與建立政黨政治制度運作。五、增列第五項，明定僑居國外國民選舉候選人之條件，並規定由政黨提出登記，以保障華僑參政權並符憲法增修條文之規定。六、增列第六項，明定政黨申請登記之候選人應為該黨黨員，並經候選人書面同意，以促進政黨政治之發展。七、原第三項移列第七項，並將「前二項」修正為「第一項、第三項至第六項」。八、明定選舉人對本籍地登記為候選人時，於本籍地行使選舉投票權，爰增列第八項。
 
 * 32 登記為候選人，應具備左列之學、經歷：一、國民大會代表、立法委員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任省（市）議員以上公職一任以上。二、監察委員候選人須專科以上學校畢業或高等考試以上考試及格，具有行政、司法工作經驗四年以上；或曾在專科以上學校任教或執行律師、會計師業務四年以上；或曾任省（市）議員以上公職一任以上。三、省（市）議員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任縣（市）議員以上公職一任以上。四、縣（市）議員候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職一任以上。五、鄉（鎮、市）民代表候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職、村、里長一任以上。六、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗四年以上；或曾在專科以上學校擔任講師以上教職四年以上；或執行經高等考試及格之專門職業四年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上。七、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗四年以上或曾任鄉（鎮、市）民代表以上公職一任以上。八、村、里長候選人須國民小學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表、村、里長以上公職一任以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則，由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之一種中央公職人員候選人資格檢覈合格者，取得同款他種中央公職人員及第三款至第五款之公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第一款及第三款至第五款之公職候選人資格；曾經第三款公職候選人資格檢覈合格者，取得第四款、第五款公職候選人資格；曾經第四款公職候選人資格檢覈合格者，取得第五款公職候選人資格；曾經第六款公職候選人資格檢覈合格者，取得第七款、第八款公職候選人資格；曾經第七款公職候選人資格檢覈合格者，取得第八款公職候選人資格。
 
@@ -82,9 +102,9 @@
 
 * 33 二種以上公職人員選舉同時辦理時，申請登記為候選人者，以登記一種為限。同種公職人員選舉具有二個以上之候選人資格者，以登記一個為限。同時為二種或二個以上候選人登記時，其登記無效。
 
-* 34 有左列情事之一者，不得登記為候選人：一、曾犯內亂、外患罪，經判刑確定者。二、曾犯貪污罪，經判刑確定者。三、曾犯第八十七條至第九十一條之罪或刑法第一百四十二條、第一百四十四條之罪，經判刑確定者。四、犯前三款以外之罪，判處有期徒刑以上刑之確定，尚未執行或執行未畢者。但受緩刑宣告者，不在此限。五、受保安處分或感訓處分之裁判確定，尚未執行或執行未畢者。六、受破產宣告確定，尚未復權者。七、依法停止任用或受休職處分，尚未期滿者。八、褫奪公權，尚未復權者。九、受禁治產宣告，尚未撤銷者。
+* 34 有左列情事之一者，不得登記為候選人：一、動員戡亂時期終止後，曾犯內亂、外患罪，經依刑法判刑確定者。二、曾犯貪污罪，經判刑確定者。三、曾犯刑法第一百四十二條、第一百四十四條之罪，經判刑確定者。四、犯前三款以外之罪，判處有期徒刑以上之刑確定，尚未執行或執行未畢者。但受緩刑宣告者，不在此限。五、受保安處分或感訓處分之裁判確定，尚未執行或執行未畢者。六、受破產宣告確定，尚未復權者。七、依法停止任用或受休職處分，尚未期滿者。八、褫奪公權，尚未復權者。九、受禁治產宣告，尚未撤銷者。
 
-> 釋：第五款增列受感訓處分之裁判確定，尚未執行或執行未畢者，亦不得登記為候選人，以期周延。
+> 釋：照現行法第一款內「經判刑確定者」修正為「經依刑法判刑確定者」。
 
 * 35 左列人員不得申請登記為候選人：一、現役軍人或警察。二、現在學校肄業學生。三、辦理選舉事務人員。前項第一款之現役軍人，屬於後備軍人或國民兵應召者，在應召未入營前，或係教育、勤務及點閱召集，均不受限制。第一項第二款之現在學校肄業學生，屬於現職公職人員再行進修者，得申請登記為候選人。現任公務人員不得在其任所所在地，申請登記為國民大會代表候選人。
 
@@ -94,31 +114,33 @@
 
 > 釋：明定政黨得推薦候選人參加公職人員選舉及登記之手續。
 
-* 36 候選人名單公告後，經發現候選人在公告前或投票前有左列情事之一者，投票前由選舉委員會撤銷其候選人登記；當選後依第一百零三條之一規定提起當選無效之訴：一、候選人資格不合第三十一條規定或候選人檢覈合格資格被撤銷者。二、有第三十四條或第三十五條第一項、第三項之情事者。三、依第八十五條第一項規定不得登記為候選人者。
+* 36 候選人名單公告後，經發現候選人在公告前或投票前有左列情事之一者，投票前由選舉委員會撤銷其候選人登記；當選後依第一百零三條之一規定提起當選無效之訴：一、候選人資格不合第三十一條規定或候選人檢覈合格資格被撤銷者。二、有第三十四條或第三十五條第一項、第四項之情事者。三、依第八十五條第一項規定不得登記為候選人者。
 
-> 釋：一、本條將前段所定：「當選後由選舉委員會向法院提起當選無效之訴」修正為「當選後依第一百零三條之一規定提起無效之訴。」俾與本法「選舉訴訟」之規定相配合。二、將第二款改列為第一款並增列「候選人資格不合第三十一條規定或」等字，俾候選人資格不合積極要件者，亦得依本條規定處理。三、第三款未修正。
+> 釋：配合第三十五條規定，爰將第二款中所定「第三項」修正為「第四項」。
 
-* 37 經登記為候選人者，於登記期間截止後，不得撤回其候選人登記；在登記期間截止前經撤回登記者，不得再申請同一種類公職人員候選人登記。經政黨推薦之候選人，政黨得於登記期間截止前，撤回其推薦。經登記為候選人者，於登記期間截止後，遷出其選舉區或除籍或喪失職業團體或婦女團體會員資格者，不影響其候選人資格，並仍在原選舉區或各該團體行使選舉權。
+* 37 經登記為候選人者，不得撤回其候選人登記。經政黨推薦之區域、山胞選舉候選人，政黨得於登記期間截止前，撤回其推薦。經政黨登記之全國不分區、僑居國外國民選舉候選人名單，政黨得於登記期間截止前撤回或更換。經登記為候選人者，於登記期間截止後，遷出其選舉區或除籍者，不影響其候選人資格，並仍在原選舉區行使選舉權。
 
-> 釋：一、明定政黨於推薦候選人參加公職人員選舉後，在登記期間截止前，政黨亦得撤回其推薦，爰增訂第二項。二、增訂第三項，避免以遷出選舉區等手段，達到退出選舉之目的，以端正選風。
+> 釋：一、為端正選風，杜絕「搓圓仔湯」弊端，爰修正第一項使經登記為候選人者不得撤回其登記。二、明定第二項推薦之候選人為區域、山胞選舉之候選人，俾與第三項所定政黨於全國不分區、僑居國外國民選舉提出候選人名單上之候選人有所區別。三、政黨登記全國不分區及僑居國外國民選舉候選人名單後，如因故須撤回或更換候選人登記截止前撤回或更換，爰增列第三項。四、第三項之更換包括人數變更、人員異動、順序調整。五、配合職婦團體選舉之廢止，爰將原第三項「或喪失職業團體或婦女團體會員資格」及「或各該團體」部分刪除。
 
-* 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。但村、里長候選人免予繳納。政黨推薦之候選人，其保證金減半繳納。但政黨撤回推薦者，應全額繳納。前二項保證金應於公告當選人名單後十日內發還。但監察委員選舉候選人為零票；其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者，不予發還。
+* 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。但村、里長候選人免予繳納。政黨推薦之區域、山胞候選人，其保證金減半繳納。但政黨撤回推薦者，應全額繳納。全國不分區、僑居國外國民選舉候選人之保證金，依公告數額，由登記之政黨按登記人數繳納。前三項保證金應於公告當選人名單後十日內發還。但有左列情事之一者，不予發還：一、監察委員選舉候選人得票為零票者。二、全國不分區、僑居國外國民選舉候選人未當選者。三、其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者。
 
-> 釋：一、第一項刪除「視實際需要預計」等字，並將「得免繳納」修正為「免予繳納」。二、明定經政黨推薦之候選人減半繳納保證金，以示優惠。但政黨撤回推薦者，仍應全額繳納，爰增訂第二項。
+> 釋：一、將現行法第二項之候選人修正為「區域、山胞」候選人。二、增列第三項全國不分區、僑居國外國民選舉候選人之保證金，由政黨依公告數額繳納。三、將現行法第三項移列第四項，並配合第三項之增訂，明定全國不分區、僑居國外國民選舉候選人未當選者不發還保證金。
 
 * 39 公職人員選舉，其選舉區依左列規定：一、國民大會代表由直轄市及縣（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。二、立法委員由省（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。三、省議員由縣（市）選出者，以其行政區域為選舉區；直轄市議員選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。四、縣（市）議員，鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。五、縣（市）長，鄉（鎮、市）長，村、里長選舉各依其行政區域為選舉區。
 
 > 釋：一、監察委員選舉區已規定於第三十一條第二項，爰將本條第三款刪除。以下款次遞移。二、有關選舉區之規定，凡民意代表選舉均得在其行政區域內劃分選舉區，爰將國民大會代表及省議員選舉部分修正。
 
-* 40 國民大會代表、立法委員由職業團體選出者，以同類職業團體為選舉區。國民大會代表由婦女團體選出者，以省（市）婦女團體為選舉區。
+* 40 （刪除）
 
-* 41 國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，由生活習慣特殊國民選出者，其選舉區依左列規定：一、國民大會代表、立法委員，由生活習慣特殊國民選出者，以山胞為選舉區，並得劃分為平民山胞、山地山胞選舉區。二、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，由生活習慣特殊國民選出者，以省（市）、縣（市）、鄉（鎮、市）行政區域內之山胞為選舉區，並得按平地山胞、山地山胞或在其行政區域內劃分選舉區。
+> 釋：配合職婦團體選舉之廢止，爰刪除本條。
 
-> 釋：一、為便於山胞選出之省（市）議員，在省（市）行政區域內劃分選舉區，分區選舉，將現行條文第一款之省（市）議員選舉區劃分之規定，移列第二款。二、第二款後段酌作修正，俾山胞選出之省（市）議員、縣（市）議員、鄉（鎮、市）民代表，其選舉區之劃分較具彈性。
+* 41 國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，由山胞選出者，其選舉區依左列規定：一、國民大會代表、立法委員，由山胞選出者，以山胞為選舉區，並得劃分為平地山胞、山地山胞選舉區。二、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，由山胞選出者，以省（市）、縣（市）、鄉（鎮、市）行政區域內之山胞為選舉區，並得按平地山胞、山地山胞或在其行政區域內劃分選舉區。
 
-* 42 第三十九條第一款至第三款、第四十一條第一款、第二款之省（市）議員選舉區，由中央選舉委員會劃分之；第三十九條第四款及第四十一條第二款之縣（市）議員選舉區，由省選舉委員會劃分之；第四十一條第二款之鄉（鎮、市）民代表選舉區，由縣選舉委員會劃分之；並應於發布選舉公告時公告。但選舉區有變更時，應於公職人員任期或規定之日期屆滿六個月前發布之。前項選舉區，應斟酌行政區域、人口分布、地理環境、交通狀況及應選出名額劃分之。
+> 釋：將原「生活習慣特殊國民」改為「山胞」。
 
-> 釋：一、第一項配合第三十九條及第四十條第一項之修正，予以修正。「六個月」修正為「二年」。二、為明確訂定劃分選舉區準則，爰增列第二項。
+* 42 第三十九條第一款至第三款、第四十一條第一款、第二款之省（市）議員選舉區，由中央選舉委員會劃分之；第三十九條第四款及第四十一條第二款之縣（市）議員選舉區，由省選舉委員會劃分之；第三十九條第四款及第四十一條第二款之鄉（鎮、市）民代表選舉區，由縣選舉委員會劃分之；並應於發布選舉公告時公告。但選舉區有變更時，應於公職人員任期或規定之日期屆滿一年前發布之。前項選舉區，應斟酌行政區域、人口分布、地理環境、交通狀況及應選出名額劃分之。
+
+> 釋：一、第三十九條第四款規定鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得在其行政區域內劃分選舉區。係屬縣選舉委員會辦理事項，本條第一項增列「第三十九條第四款及」等字，以資明確。二、將現行法第一項內「六個月」修正為「一年」。
 
 * 43 選舉委員會應依左列規定期間發布各種公告：一、選舉公告，須載明選舉種類、名額、選舉區之劃分、投票日期及投票起、止時間。並應於公職人員任期或規定之日期屆滿四十日前發布之。但重行選舉、重行投票或補選之公告日期不在此限。二、候選人登記，應於投票日二十日前公告，其登記期間不得少於五日。但鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉不得少於三日。三、選舉人名冊，應於投票日十五日前公告，其公告期間不得少於五日。四、候選人名單，應於競選活動開始前一日公告。五、選舉人人數，應於投票日三日前公告。六、當選人名單，應於投票日後七日內公告。前項第二款候選人登記期間截止後，如有選舉區無人登記時，得就無人登記之選舉區，公告辦理第二次候選人登記，其登記期間，不得少於二日。
 
@@ -128,59 +150,61 @@
 
 > 釋：一、本條將投票完成日期由任期或規定之日期屆滿「二十日前」修正為「十日前」，以縮短選舉程序進行期間。二、重行選舉、重行投票或補選皆係因法定原因而產生，其投票完成日期事實上無法限期完成爰增訂但書規定如上。
 
-* 45 公職人員選舉，候選人競選活動期間依左列規定：一、國民大會代表、立法委員、監察委員為十五天。二、省（市）議員、縣（市）議員、縣（市）長為十天。三、鄉（鎮、市）民代表、鄉（鎮、市）長為五天。四、村里長為三天。前項期間，以投票日前一日向前推算，其每日競選活動之起、止時間，由選舉委員會定之。
+* 45 公職人員選舉，候選人競選活動期間依左列規定：一、國民大會代表、立法委員、監察委員、省（市）議員、縣（市）議員、縣（市）長、鄉（鎮、市）長為十天。二、鄉（鎮、市）民代表、村、里長為五天。前項期間，以投票日前一日向前推算；其每日競選活動之起、止時間，由選舉委員會定之。
 
-> 釋：一、為放寬監察委員競選活動之限制，爰於第一項第一款增列「監察委員」之競選活動期間為十五天並將第二項刪除。二、第二項係就現行第三項文字修正移列。
+> 釋：為配合職婦團體選舉之廢止、中央公職人員選區之調整及為使同時舉辦之選舉其競選活動期間一致，將第一項原四款之規定，修正為二款，並將其競選活動期間酌作修正。
 
 * 45.1 各種公職人員競選經費最高限額，應由選舉委員會訂定，並於發布選舉公告之日同時公告之。前項競選經費最高限額，應依公職人員選舉種類、競選活動期間，斟酌選舉區面積、交通狀況，競選活動項目及必需費用，並參照物價指數，訂定基本金額；而以選舉區應選出名額除選舉區人口總數，乘基本金額計算之。
 
 > 釋：現行條文第二項所定競選經費最高限額之計算公式，予以刪除，並按實務經驗予以修正。
 
-* 45.2 候選人不得接受左列競選經費之捐助：一、外國團體、法人、個人或主要成員為外國人之團體、法人之捐助。二、同一種選舉其他候選人之捐助。
+* 45.2 政黨及候選人不得接受左列競選經費之捐助：一、外國團體、法人、個人或主要成員為外國人之團體、法人。二、同一種選舉其他政黨或候選人。三、公營事業或接受政府捐助之財團法人。
 
-> 釋：配合「非常時期人民團體組織法」修正草案，爰於第一款增列「或主要成員為外國人之團體、法人」等字。
+> 釋：一、增列政黨為本條規範之對象。二、配合修正第一項第二款規定。三、增列公營事業及接受政府捐助之財團法人為政黨及候選人不得接受捐助之對象。
 
 * 45.3 候選人應設競選經費收支帳簿，並由其本人或指定人員負責記帳保管，以備查考。前項候選人應於投票日後三十日內，檢同競選收支結算申報表，向選舉委員會申報競選經費收支結算，並應由本人或指定記帳人員簽章負責。選舉委員會對前項所申報競選經費之支出，有事實足認其有不實者，得要求檢送支出憑據或證明文件，以憑查核。競選經費支出憑據、證明文件等，應於申報後保管六個月。但於發生訴訟時，應保管至判決確定後三個月。競選經費查核準則，由中央選舉委員會定之。
 
 > 釋：一、本條新增。二、第一項規定候選人應設置競選經費收支帳簿，以備查考。三、第二項規定第一項所指候選人應向選舉委員會申報競選經費結算限期及應繳交之報表、帳簿。四、第三項規定選舉委員會對於競選經費之支出有不實者，得要求檢送有關支出憑據或證明文件。五、第四項規定保存有關競選經費收支憑據、證明文件等之期限，俾利查核。
 
-* 45.4 候選人之競選經費，於第四十五條之一規定最高限額內而非接受捐贈者，得於申報所得稅時作為當年度列舉扣除額。個人對於候選人競選經費之捐贈，不得超過新臺幣二萬元；其為營利事業捐贈者，不得超過新臺幣三十萬元。候選人接受競選經費捐贈之總額，不得超過第四十五條之一規定之競選經費最高限額。個人對於依法設立政黨之捐贈，不得超過綜合所得總額百分之二十，其總額並不得超過新臺幣二十萬元；其為營利事業捐贈者，不得超過所得額百分之十，其總額並不得超過新臺幣三百萬元。前二項之捐贈，個人得於申報所得稅時，作為當年度列舉扣除額；其為營利事業捐贈者，得列為當年度之費用或損失。營利事業連續虧損三年以上者，不得捐贈競選經費。
+* 45.4 自選舉公告之日起，至投票日後三十日內，候選人所支付與競選活動有關之競選經費，於第四十五條之一規定最高限額內，減除接受捐贈，得於申報所得稅時作為當年度列舉扣除額。個人對於候選人競選經費之捐贈，不得超過新臺幣二萬元；其為營利事業捐贈者，不得超過新臺幣三十萬元。候選人接受競選經費捐贈之總額，不得超過第四十五條之一規定之競選經費最高限額。個人對於依法設立政黨之捐贈，不得超過綜合所得總額百分之二十，其總額並不得超過新臺幣二十萬元；其為營利事業捐贈者，不得超過所得額百分之十，其總額並不得超過新臺幣三百萬元。前二項之捐贈，個人得於申報所得稅時，作為當年度列舉扣除額；其為營利事業捐贈者，得列為當年度之費用或損失。但對於政黨之捐贈，政黨推薦之候選人於該年度省（市）以上公職人員選舉之平均得票率未達百分之五者，不適用之。該年度未辦理選舉者，以上次選舉之年度得票率為準。如其為新成立之政黨者，以下次選舉之年度得票率為準。營利事業連續虧損三年以上者，不得捐贈競選經費。
 
-> 釋：為使競選經費來源正常化及鼓勵參與起見，爰斟酌外國立法例並參照所得稅法之規定，明定候選人之競選經費及對於候選人競選經費及依法設立政黨之捐款，在一定額度內得列為當年綜合所得扣除額或當年費用或損失。
+> 釋：規定自選舉公告之日起，至投票日後三十日內，候選人競選經費方得申報列舉扣除，第一項爰增訂競選經費支付之起迄期間，俾資候選人有所遵循，並避免徵納雙方爭議，爰修正第一項。
 
-* 45.5 公職人員候選人得票超過各該選舉區最低當選票數四分之三以上者，應補貼其競選費用，每票補貼新臺幣十元。但其最高額不得超過各該選舉區候選人競選經費最高限額。前項最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。第一項所需補貼費用，由各級選舉委員會依法編列預算。
+* 45.5 候選人除全國不分區、僑居國外國民選舉及監察委員選舉外，得票達各該選舉區當選票數四分之三以上者，應補貼其競選費用；每票補貼新臺幣三十元。但其最高額，不得超過各該選舉區候選人競選經費最高限額。前項當選票數，當選人在二人以上者，以最低當選票數為準；其最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。第一項所需補貼費用，依第十三條規定編列預算。
 
-> 釋：本條新增。旨在規定公費競選，以淨化政風。
+> 釋：一、為使公職人員候選人競選費用之補貼標準更臻明確，爰將第一項文字中之「超過」二字修正為「達」字。又全國不分區、僑居國外國民選舉係依政黨比例代表制產生，候選人未直接參選，明定不予補助，監察委員選舉屬間接選舉，得票數少，沒有補貼實益，亦明定不予補助。同時將補貼金額改為每票三十元。二、增列關於第一項所稱「當選票數」之計算如當選人在二人以上者，應以最低當選票數為準。爰將第二項酌作修正，用臻明確。三、修正第三項明定補助公職人員候選人競選費用之預算，依第十三條規定由各級政府編列支應，爰予修正。
 
 * 46 候選人於競選活動期間，除監察委員選舉外，得在其選舉區設立競選辦事處及置助選員。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
 
 > 釋：一、對於競選活動之規範，已明確採取列舉禁止主義立法，爰合併修正第一、二項為第一項。二、現行條文第三項改列為第二項。
 
-* 47 左列人員不得擔任助選員：一、已登記之候選人。二、公務人員。三、有第三十四條、第三十五條第一項各款情事之一者。一人不得擔任二以上候選人之助選員。
+* 47 左列人員不得擔任助選員：一、已登記之候選人。但全國不分區、僑居國外國民選舉之候選人不在此限。二、公務人員。三、有第三十四條、第三十五條第一項各款情事之一者。
+
+> 釋：一、全國不分區、僑居國外國民選舉之候選人，並未直接參選，與一般候選人性質不同，爰於第一項第一款增訂但書，排除不得擔任助選員之規定。二、刪除第二項規定，允許一人得擔任二以上候選人之助選員。
 
 * 48 （刪除）
 
 > 釋：本條刪除。與現行第四十六條合併。
 
-* 49 政見發表會除監察委員選舉由選舉委員會主辦外，分公辦政見發表會及自辦政見發表會。自辦政見發表會之期間在先，公辦政見發表會之期間在後。公辦政見發表會期間不得多於自辦政見發表會期間。公辦政見發表會，由選舉委員會於公辦政見發表會期間內舉辦，候選人應親自到場發表政見。但村、里長選舉，公辦政見發表會得由選舉委員會視實際情形辦理或免辦。自辦政見發表會，候選人應於自辦政見發表會期間內舉辦，每日不得超過六場，每場以兩小時為限，候選人應親自到場，除候選人及其助選員外，他人不得在場演講；其時間、地點應於舉辦二日前函請選舉委員會核准。舉辦政見發表會時，選舉委員會得派監察人員到場監察。
+* 49 政見發表會，除監察委員選舉由選舉委員會主辦外，分公辦政見發表會及自辦政見發表會。公辦政見發表會，除全國不分區、僑居國外國民選舉免辦外，由選舉委員會於競選活動期間內舉辦，候選人應親自到場發表政見。但鄉（鎮、市）民代表、村、里長選舉，公辦政見發表會，得由選舉委員會視實際情形辦理或免辦。自辦政見發表會，由候選人於競選活動期間內舉辦，每日不得超過八場，每場以兩小時為限，候選人應親自到場，除候選人及其助選員外，他人不得在場演講；其時間、地點應於舉辦二日前函報選舉委員會核准。舉辦政見發表會時，選舉委員會得派監察人員到場監察。
 
-> 釋：一、第一項係將現行第四十五條第二項所定監察委員候選人不得舉辦自辦政見發表會之規定予以納入。二、村、里長選舉為基層之選舉，其選舉區範圍狹小，候選人之為人處事已為選民所熟悉。且同額競選時，實無辦理公辦政見會之必要。爰於第二項增列但書規定，俾符實際需要。三、為使候選人有較充裕之時間以安排自辦政見發表會之時間及地點起見，爰將「三日」改為「二日」。四、第四項於首句「舉辦政見發表」下加一「會」字俾求明確。
+> 釋：一、第一項順應輿情，並為使候選人於競選活動期間能靈活舉辦政見發表會，爰將現行規定自辦在先公辦在後之政見發表會辦理原則予以修正。二、全國不分區、僑居國外國民選舉之公辦政見發表會，由於政黨推薦之候選人不直接參與競選活動，且事實上舉辦亦有困難，爰予第二項明文規定免辦。三、將自辦政見發表會每日不得超過六場之規定，改以每日不得超過八場，酌予放寬。
 
-* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、出生地、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報，並應於投票日二日前送達選舉區內各戶或監察委員之選舉人，並分別張貼適當地點。前項候選人政見及個人資料，候選人應於申請登記為候選人時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改，逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。候選人個人資料，由候選人自行負責。其個人資料為選舉委員會職務上所已知或經查明不實者，不予刊登公報。經所屬政黨推薦之候選人刊登其政黨推薦，未經所屬政黨推薦或經政黨推薦後撤回之候選人，刊登其黨籍。選舉委員會得視實際需要，選定公職人員選舉種類，透過電視或其他大眾傳播工具，辦理選舉活動。
+* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、出生地、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報。前項候選人之政見、號次、相片、本籍之編印，於全國不分區、僑居國外國民選舉候選人不適用之。第一項、第二項候選人及政黨之資料應於申請登記時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改，逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。候選人個人及政黨資料，由候選人及政黨自行負責。其個人及政黨資料為選舉委員會職務上所已知或經查明不實者，不予刊登公報。經所屬政黨推薦之候選人刊登其政黨推薦；未經所屬政黨推薦或經政黨推薦後撤回之候選人，不刊登其黨籍。選舉公報應於投票日二日前送達選舉區內各戶或監察委員之選舉人，並分別張貼適當地點。但全國不分區、僑居國外國民選舉，其選舉公報得由中央選舉委員會以報紙刊登方式為之。選舉委員會得視實際需要，選定公職人員選舉種類，透過電視或其他大眾傳播工具，辦理選舉及政黨選舉活動；其辦法，由中央選舉委員會定之。
 
-> 釋：一、第一項中「本籍」下增「出生地、」三字；後段修正為「編印選舉公報，並應於投票日二日前送達選舉區內各戶或監察委員之選舉人．．．．」，以應需要。二、現行條文第二項前段「前項候選人政見及個人資料，候選人應於申請登記為候選人時，一併繳送選舉委員會」修正列為第二項。三、現行條文第二項後段有關候選人政見內容之規定修正列為第三項。其中「不修改者，對違背規定部分不予刊登公報」修正為「逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。」以利選務工作。四、現行條文第二項有關候選人個人資料不實不予刊登公報之規定，修正列為第四項，並增訂候選人個人資料由候選人自行負責。後段「未經所屬政黨．．．．」上增「經所屬政黨推薦之候選人刊登其政黨推薦，」；「不刊登其黨籍」修正為「刊登其黨籍」。五、現行條文第三項移列為第五項，並為順應擴大公費選舉之建議，予以修正。
+> 釋：一、增列第二項，就選舉公報之內容明定候選人之政見、號次、相片、本籍，不適用於全國不分區、僑居國外國民選舉候選人。二、將第一項後段有關選舉公報送達日期移列於第六項。三、原第二項酌作文字修正，界定候選人及政黨資料之範圍，並移列第三項。四、原第三項移列第四項。五、原第四項移列第五項，修正明定未經政黨推薦或經政黨推薦後撤回之候選人，不刊登其黨籍，並酌作文字修正。六、原第五項移列第七項。
 
-* 51 候選人印發以文字、圖畫從事競選之宣傳品，應親自簽名。前項競選之宣傳品，除由選舉委員會提供或指定地點外，不得張貼。張貼之宣傳品，其規格由中央選舉委員會定之。候選人懸掛或豎立標語、看板、旗幟、布條等廣告物，除設置於宣傳車輛者外，以其競選辦事處三十公尺內之範圍為限。
+* 51 候選人印發以文字、圖畫從事競選之宣傳品，應親自簽名。前項競選之宣傳品，除由選舉委員會提供或指定地點外，不得張貼。張貼之宣傳品，其規格，由中央選舉委員會定之。候選人懸掛或豎立標語、看板、標幟、布條等廣告物，除設置於宣傳車輛者外，以其競選辦事處三十公尺內之範圍為限。
 
-> 釋：一、為使候選人對於競選活動期間印發之文宣物品負責，爰將第一項配合修正。二、配合第一項之修正，將第二、三項合併修正為第二項。三、為應候選人競選活動之實際需要爰增訂第三項。
+> 釋：將現行法第三項內「旗幟」修正為「標幟」。
 
-* 51.1 政黨於競選活動期間，得為其所推薦之候選人舉辦政見發表會及印發宣傳品。前項政見發表會，除候選人及其助選員外，由政黨向選舉委員會報備之人員，亦得在場演講。政黨印發之宣傳品，應載明政黨名稱。第一項之政見發表，應於自辦政見發表會期間內舉辦，並準用第四十九條第三項及第四項之規定。
+* 51.1 政黨於競選活動期間，得為其所推薦之候選人舉辦政見發表會及印發宣傳品。前項政見發表會，除候選人及其助選員外，由政黨向選舉委員會報備之人員，亦得在場演講。政黨印發之宣傳品，應載明政黨名稱。第一項之政見發表會，應於競選活動期間內舉辦，並準用第四十九條第三項及第四項之規定。
 
-> 釋：明定政黨於競選活動期間得為其所推薦之候選人印發宣傳品，並得於候選人舉辦自辦政見發表會期間內為其所推薦之候選人舉辦政見發表會。
+> 釋：本條第四項係配合第四十九條修正條文酌作文字修正。
 
-* 52 候選人於競選活動期間，除監察委員選舉外，得使用宣傳車輛及擴音器。候選人為競選活動使用宣傳車輛，應懸掛選舉委員會製發之旗幟，其數量每人不得超過五輛。但以直轄市或縣（市）為其選舉區者，每人不得超過三輛；以鄉（鎮、市）為其選舉區者，每人不得超過二輛；以村、里為其選舉區者，每人不得超過一輛。候選人為競選活動使用之擴音器，以裝置於宣傳車輛、自辦政見發表會場或競選辦事處為限，並不得妨害其他候選人發表政見。
+* 52 政黨及候選人於競選活動期間，除監察委員選舉外，得使用宣傳車輛及擴音器。候選人為競選活動使用宣傳車輛，其數量，每人不得超過五輛。但以直轄市或縣（市）為其選舉區者，每人不得超過三輛。以鄉（鎮、市）為其選舉區者，每人不得超過二輛。以村里為其選舉區者，每人不得超過一輛。政黨為競選活動使用宣傳車輛，其數量，每直轄市、縣（市）不得超過五輛。政黨及候選人為競選活動使用宣傳車輛，應懸掛選舉委員會製發之標幟。政黨及候選人為競選活動使用之擴音器，以裝置於宣傳車輛、自辦政見發表會場或競選辦事處為限，並不得妨害其他政黨及候選人發表政見。
 
-> 釋：一、配合第四十六條之修正，爰增列第一項。二、現行條文第一、二項合併修正為第二項，文字酌作修正並將本法施行細則第五十四條第一項，有關村、里長選舉時使用車輛數之規定，改列入本條第二項末段，以期周延。
+> 釋：一、第一項明定政黨得使用宣傳車輛及擴音機助選。二、原第二項前段候選人之宣傳車輛應懸掛選委會製發之標幟，增訂政黨之宣傳車輛亦應如此，並移列第四項。三、第三項明定政黨之宣傳車輛其數目之限制。四、原第三項移列第五項。
 
 * 53 （刪除）
 
@@ -188,19 +212,29 @@
 
 * 54 候選人或其助選員競選言論，不得有左列情事：一、煽惑他人犯內亂罪或外患罪。二、煽惑他人以暴動破壞社會秩序。三、觸犯其他刑事法律規定之罪。
 
-* 55 候選人或其助選員競選活動，不得有左列行為：一、在政見發表會外，另行公開演講。二、於規定期間之每日起、止時間外從事公開競選活動。三、結眾遊行。四、發動選舉人簽名或於廣播、電視播送廣告，從事競選活動。五、燃放鞭炮。
+* 55 候選人或其助選員競選活動，不得有左列行為：一、於規定期間之每日起、止時間之外，從事公開競選活動。二、發動選舉人簽名或於廣播、電視播放廣告，從事競選活動。
 
-> 釋：一、現行條文第一項後段「情事」二字修正為「行為」。二、另鑒於候選人或其助選員如在政見發表會或競選辦事處外公開播放演講之錄影、錄音，其效果與公開演講無異，有禁止之必要，爰增訂於第五款，加以規範。三、現行條文第二款於修正條文第四十六條已有規範，故予刪除。四、第三款及第五款刪除。五、第四款及第六款改為第三款及第四款並增列第五款「燃放鞭炮」。六、為配合候選人得利用報紙、雜誌刊登廣告從事競選活動，現行條文第七款酌予修正，並移列為第六款。七、現行條文第八款配合第四十六條之修正，予以刪除。
+> 釋：一、刪除原條文之第一、三、五款，因其所禁止之事項均有相關法令規範，無須重覆。二、原條文之第二、四款改列第一、二款。
 
-* 55.1 競選活動期間，政黨不得有左列行為：一、在政見發表會外，公開演講為候選人宣傳。二、設立競選辦事處及置助選員。三、使用宣傳車輛或於政見發表會外使用擴音器，為候選人宣傳。四、結眾遊行，為候選人宣傳。五、於政黨辦公處三十公尺範圍外，張貼宣傳品，或懸掛、豎立標語、看板、旗幟、布條等廣告物，為候選人宣傳。六、發動選舉人簽名或於廣播、電視播送廣告，為候選人宣傳。七、燃放鞭炮。
+* 55.1 競選活動期間，政黨不得有左列行為：一、於規定期間之每日起、止時間之外，從事公開競選活動。二、設立競選辦事處及置助選員。三、於政黨辦公處三十公尺範圍外，張貼宣傳品或懸掛豎立標語看板、旗幟、布條等廣告物，為候選人宣傳。四、發動選舉人簽名或於廣播、電視播送廣告，為候選人宣傳。
 
-> 釋：增訂競選活動期間，政黨不得作為之行為，以資規範。
+> 釋：一、配合第五十三、五十五條之修正，爰刪除現行法第一、三、四、七款，另增訂第一款。二、原條文之第五、六款改列第三、四款。
 
 * 56 競選活動期間，除候選人及其助選員或政黨依本法規定從事競選活動外，任何人不得有左列行為：一、公開演講或公開播放演講之錄影、錄音，為候選人宣傳。二、印發或張貼宣傳品，或懸掛、豎立標語、看板、旗幟、布條等廣告物，為候選人宣傳。三、以未經許可為競選活動使用之宣傳車輛或擴音器，為候選人宣傳。四、結眾遊行，為候選人宣傳。五、發動選舉人簽名或於大眾傳播工具刊播廣告，為候選人宣傳。六、為候選人燃放鞭炮。
 
 > 釋：一、序文末句「左列之行為」修正為「左列行為」。二、競選活動期間，政黨不得作為之行為，已於本法第五十五條之一明定，爰於本條序文明定予以排除。三、第一款配合第五十五條第四款酌予修正。四、第二款配合修正條文第五十一條作文字調整。五、第五款酌作文字修正。
 
-* 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。監察委員選舉，於省（市）議會設投票所。投票所於投票完畢後，即改為開票所，當眾唱名開票，開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果。
+* 56.1 政黨及任何人不得於投票日從事競選或助選活動。
+
+> 釋：投票日當天應禁止一切競選及助選活動，惟目前依第四十五條規定之競選活動期間及第五十五條第二款競選活動之起、止時間規定未臻明確，爰予增訂本條條文，以維護選舉秩序。
+
+* 56.2 全國不分區、僑居國外國民選舉，政黨登記之候選人不得接受競選經費之捐贈；其競選活動，以參加第五十一條之一規定之競選活動為限。
+
+> 釋：全國不分區、僑居國外國民選舉係政黨比例代表制，而政黨登記之候選人並未直接參與競選活動，其活動係由政黨為之，爰明定不得接受競選經費，亦不得從事第五十一條之一規定以外之競選活動。
+
+* 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。監察委員選舉，於省（市）議會設投票所。投票所於投票完畢後，即改為開票所，當眾唱名開票。開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果，並於開票所門口張貼。
+
+> 釋：於第三項末段增訂開票結果亦應於開票所門口張貼，以昭公信。
 
 * 58 投票所、開票所置主任管理員一人，管理員若干人，由選舉委員會派充，辦理投票、開票工作。
 
@@ -208,7 +242,9 @@
 
 > 釋：第二項配合政黨參與選舉推薦投、開票所監察員之規定，予以修正。
 
-* 60 選舉票，應由選舉委員會按選舉區印製分發應用。選舉票上應刊印各候選人之號次、姓名及相片。前項選舉票，應於投票日前一日交各該投票所主任管理員會同主任監察員當眾點清。
+* 60 選舉票應由選舉委員會按選舉區印製分發應用。選舉票上應刊印各候選人之號次、姓名及相片。但中央公職人員選舉，經政黨推薦之候選人應同時刊印其黨籍。前項選舉票，應於投票日前一日交各該投票所主任管理員會同主任監察員當眾點清。
+
+> 釋：全國不分區、僑居國外國民選舉係採政黨比例方式，為配合國情及國人之投票習慣且簡易可行，乃採一張票方式選出，並以政黨推薦之候選人為計算標準，爰修正第一項，增列但書規定中央公職人員選舉，經政黨推薦之候選人應同時刊印其黨籍。
 
 * 61 選舉之投票，由選舉人於選舉票圈選欄上，以選舉委員會製備之圈選工具圈選一人。但監察委員選舉，其圈選人數以不超過第三條第一項規定之連記人數為準。選舉人圈選後不得將圈選內容出示他人。
 
@@ -222,19 +258,35 @@
 
 * 64 選舉投票或開票，遇有天災或其他不可抗力情事，致不能投票或開票時，應由投、開票所主任管理員報經直轄市、縣（市）選舉委員會核准，改定投票或開票日期或場所，其為中央公職人員，省（市）議員選舉或縣（市）議員，縣（市）長選舉者，並分別層報中央或省選舉委員會備查。
 
-* 65 公職人員選舉，按各選舉區應選出之名額，以候選人得票比較多數者為當選；票數相同時，以抽籤決定之。公職人員選舉，有婦女當選名額其當選人少於應行當選名額時，應將婦女候選人所得選舉票單獨計算，以得票比較多數者為當選。
+* 65 公職人員選舉，除另有規定外，按各選舉區應選出之名額，以候選人得票比較多數者為當選；票數相同時，以抽籤決定之。公職人員選舉，有婦女當選名額，其當選人少於應行當選名額時，應將婦女候選人所得選舉票單獨計算，以得票比較多數者為當選。全國不分區、僑居國外國民選舉當選名額之分配，依左列規定：一、以國民大會代表、立法委員區域及山胞選舉，各政黨所推薦候選人得票數之和，為各政黨之得票數。以各政黨得票數相加之和，除各該政黨得票數，求得各該政黨國民大會代表、立法委員得票比率；以監察委員省（市）議會選舉各政黨所推薦候選人得票數之和，為各政黨之得票數，以各政黨得票數相加之和，除各該政黨得票數，求得各該政黨監察委員得票比率。二、以應選名額乘前款得票比率所得積數之整數，即為各政黨分配之當選名額；按政黨名單順位依次當選。三、依前款規定分配當選名額，如有剩餘名額，應按各政黨分配當選名額後之剩餘數大小，依次分配剩餘名額。剩餘數相同時，以抽籤決定之。四、各政黨分配之婦女當選名額少於應行當選名額時，優先分配當選。五、政黨登記之候選人名單人數少於應分配之當選名額時，或婦女候選人數少於應分配之婦女當選名額時，均視同缺額。六、各該政黨之得票比率未達百分之五以上者，不予分配當選名額。其得票數不列入第一款計算。七、無黨籍及未經政黨推薦之候選人之得票數，不列入第一款及第六款計算。八、第一款至第三款及第六款小數點均算至小數點第四位，第五位以下四捨五入。
 
-* 66 候選人數未超過或不足各該選舉區應選出之名額時，應以所得票數達左列規定以上者始為當選。但監察委員及村、里長選舉不在此限：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉為各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十。二、縣（市）長、鄉（鎮、市）長選舉為各該選舉區選舉人總數百分之二十。前項選舉結果未能當選或當選不足應選出之名額時，縣（市）長、鄉（鎮、市）長應於投票後一定期間內公告重行選舉。國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表視同缺額；同一選舉區內缺額達二分之一時，應定期補選。
+> 釋：一、第一項增列「除另有規定外」，以排除全國不分區、僑居國外國民選舉之適用。二、增列第三項，明定全國不分區及僑居國外國民選舉當選名額之計算方法。本項計算方法係採商數法之原則，分配名額採二種數據，即各個政黨得票比率當選比率之平均數為分配名額之基準，以調和各政黨得票率與當選率之差距。
 
-> 釋：一、第二項末句將「應定期重行選舉」，修正為「應定期補選」，使文義明確。二、第一項第一款「二十」修正為「十」。三、第一項第二款「二十五」修正為「二十」。
+* 66 候選人數未超過或不足各該選舉區應選出之名額時，應以所得票數達左列規定以上者，始為當選。但監察委員及村、里長選舉不在此限：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉，為各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十。二、縣（市）長、鄉（鎮、市）長選舉，為各該選舉區選舉人總數百分之二十。前項選舉結果未能當選或當選不足應選出之名額時，縣（市）長、鄉（鎮、市）長應於投票後一定期間內公告重行選舉；國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表視同缺額。同一選舉區內缺額達二分之一時，應定期補選。全國不分區、僑居國外國民選舉，不適用前二項規定。
 
-* 67 當選人在就職前死亡或被判決當選無效者，依左列規定辦理：一、縣（市）長，鄉（鎮、市）長，村、里長應定期重行選舉。二、國民大會代表、立法委員、監察委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表均視同缺額。同一選舉區內缺額達二分之一時，應定期補選。
+> 釋：增列第三項，明定中央公職人員全國不分區及僑居國外國民選舉當選人係採政黨比例代表制方式選出，故全國不分區及僑居國外國民選舉不適用本條第一項第二項之規定。
+
+* 67 當選人在就職前死亡或經判決當選無效者，依左列規定辦理：一、縣（市）長、鄉（鎮、市）長、村、里長部分，應定期重行選舉。二、國民大會代表、立法委員、監察委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表部分，視同缺額；同一選舉區內缺額達二分之一時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員、監察委員，不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。
+
+> 釋：一、將本條序文中「被判決」文字修正為「經判決」。第一款、第二款增列「部分」二字。二、鑑於全國不分區及僑居國外國民選舉，採政黨比例代表方式產生，以政黨取向，選民並未直接投票選舉政黨推薦之候選人與一般區域及山胞選舉不同，爰修正本條第二款，增列但書，規定全國不分區、僑居國外國民選出之國民大會代表、立法委員、監察委員在就職前死亡或經判決當選無效而出缺者由該政黨登記之候選人名單按順位依次遞補，並將文字酌作修正。
+
+* 67.1 當選人兼具外國國籍者，應於當選後就職前放棄外國國籍；逾期未放棄者，視為當選無效；其所遺缺額，依前條規定辦理。
+
+> 釋：明定當選人具有外國國籍者之處理規定。
 
 * 68 當選人應於規定之日就職，重行選舉或重行投票之當選人未能於規定之日就職者，其任期仍應自該規定之日起算。
 
-* 69 公職人員之罷免，得由原選舉區選舉人向選舉委員會提出罷免案。但就職未滿一年者，不得罷免。
+* 68.1 中央公職人員，除全國不分區、僑居國外國民選出者外，因辭職、罷免或其他事故出缺，致同一選舉區或省（市）議會選出者，其缺額達二分之一時，應由中央選舉委員會定期補選。但其所遺行使職權期間不足一年時，不予補選。
 
-* 70 罷免案應附理由書，以被罷免人原選舉區選舉人為提議人，其人數應合於左列規定：一、國民大會代表、立法委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之五以上。二、監察委員，為原選舉區之省（市）議會議員總數百分之十以上。三、縣（市）長，鄉（鎮、市）長，村、里長，為原選舉區選舉人總數百分之二以上。前項罷免案，一案不得為罷免二人以上之提議，但有二個以上罷免案時，得同時投票。
+> 釋：參照現行「動員戡亂時期自由地區增加中央民意代表名額辦法」第十三條規定，對於中央民意代表，除全國不分區、僑居國外國民選出者外因辭職、罷免或其他事故出缺之補選規定。
+
+* 69 公職人員之罷免，得由原選舉區選舉人向選舉委員會提出罷免案。但就職未滿一年者，不得罷免。全國不分區、僑居國外國民選舉之當選人，不適用罷免之規定。
+
+> 釋：增列第二項，明定全國不分區及僑居國外國民選舉之候選人不適用罷免之規定。
+
+* 70 罷免案應附理由書，以被罷免人原選舉區選舉人為提議人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之三以上。二、監察委員，為原選舉區之省（市）議會議員總數百分之十以上。三、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之五以上。四、縣（市）長、鄉（鎮、市）長、村、里長，為原選舉區選舉人總數百分之二以上。前項罷免案，一案不得為罷免二人以上之提議。但有二個以上罷免案時，得同時投票。
+
+> 釋：一、為使公職人員罷免提議人數更合理，爰降低國民大會代表、立法委員、省（市）議員提議人數，以增進罷免制度功能，將第一項第一款劃分為一、三兩款。二、原第二款未修正。三、原第三款移列第四款。
 
 * 71 現役軍人、警察或公務人員不得為罷免案提議人。
 
@@ -242,7 +294,9 @@
 
 * 73 選舉委員會收到罷免案提議後，應於十五日內查對其提議人；如合於規定，即通知提議人之領銜人於十日內領取連署人名冊，並於一定期間內徵求連署。前項提議人有不合規定者刪除，並即通知提議人之領銜人於五日內補足；逾期不予受理。
 
-* 74 罷免案之連署，以被罷免人原選舉區選舉人為連署人，其人數應合於左列規定：一、國民大會代表、立法委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十五以上。二、監察委員、為原選舉區之省（市）議會議員總數百分之二十以上。三、縣（市）長，鄉（鎮、市）長，村、里長，為原選舉區選舉人總數百分之十八以上。
+* 74 罷免案之連署人，以被罷免人原選舉區選舉人為連署人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十二以上。二、監察委員，為原選舉區之省（市）議會議員總數百分之二十以上。三、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十五以上。四、縣（市）長、鄉（鎮、市）長，為原選舉區選舉人總數百分之十三以上。五、村、里長，為原選舉區選舉人總數百分之十八以上。
+
+> 釋：一、參照第七十條之修正意旨降低國民大會代表、立法委員、省（市）議員、縣（市）長、鄉（鎮、市）長之連署人數，以增進罷免制度功能，將第一款國民大會代表、立法委員、省（市）議員連署人數降為百分之十二以上，至縣（市）議員以下選舉維持原人數，並改列為第三款。二、將原第三款縣（市）長、鄉（鎮、市）長連署人數降低為百分之十三以上，並移列為第四款。三、原第三款村（里）長部分維持原標準，並移列第五款。
 
 * 75 第七十條及第七十四條所稱選舉人總數，以被罷免人當選時原選舉區之選舉人總數為準；所稱選舉人，其年齡及居住期間之計算，以罷免案提出日為準。
 
@@ -282,53 +336,55 @@
 
 > 釋：一、本條新增。二、參照刑法第一百三十五條，將個人以暴力妨害選舉或罷免之處罰，納入本法，俾對依法執行職務之公務員有所保障，並維持選舉或罷免之秩序。
 
-* 87.2 公然聚眾，犯前條之罪者，在場助勢之人處三年以下有期徒刑、拘役或三萬元以下罰金；首謀及下手實施強暴脅迫者，處三年以上十年以下有期徒刑。犯前項之罪，因而致公務員於死者，首謀及下手實施強暴脅迫者，處無期徒刑或七年以上有期徒刑；致重傷者，處五年以上十二年以下有期徒刑。
+* 87.2 公然聚眾，犯前條之罪者，在場助勢之人，處三年以下有期徒刑、拘役或新臺幣九萬元以下罰金；首謀及下手實施強暴脅迫者，處三年以上十年以下有期徒刑。犯前項之罪，因而致公務員於死者，首謀及下手實施強暴脅迫者，處無期徒刑或七年以上有期徒刑；致重傷者，處五年以上十二年以下有期徒刑。
 
-> 釋：一、本條新增。二、參照刑法第一百三十六條，將聚眾以暴力妨害選舉或罷免之處罰，納入本法，俾對依法執行職務之公務員有所保障，並維持選舉或罷免之秩序。
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
 
-* 88 違反第四十五條之二第一款規定接受捐助者，處五年以下有期徒刑；違反第二款規定接受捐助者，處一年以下有期徒刑、拘役或一萬元以下罰金。犯前項之罪者，其接受捐助所得財物沒收之；如全部或一部不能沒收時，追徵其價額。
+* 88 違反第四十五條之二第一款規定接受捐助者，處五年以下有期徒刑；違反第二款或第三款規定接受捐助者，處一年以下有期徒刑、拘役或新臺幣三萬元以下罰金。犯前項之罪者，其接受捐助所得財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：一、違反第四十五條之二第一款或第二款情事者，因犯罪情節有輕重之別，宜分別科以不同之刑責。爰修正如第一項。二、參照「非常時期人民團體組織法」修正草案，增訂第二項，明定接受捐助所得財物沒收之或追徵其價額。
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
 
-* 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，得併科五萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者亦同。犯前項之罪者，所收受之賄賂沒收之，如全部或一部不能沒收時，追徵其價額。
+* 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，得併科新臺幣十五萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者，亦同。犯前項之罪者，所收受之賄賂沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：一、為貫徹防止金錢介入選舉「搓圓仔湯」等之弊端，爰於第一項及第二項所定「候選人」之下增列「或具有候選人資格者」，俾適用於已登記之候選人及未登記者。二、第三項文字修正。
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
 
 * 90 以強暴、脅迫或其他非法之方法為左列行為之一者，處五年以下有期徒刑：一、妨害他人競選或使他人放棄競選者。二、妨害他人為罷免案之提議、連署或使他人為罷免案之提議、連署者。前項之未遂犯罰之。
 
-* 91 有左列行為之一者，處五年以下有期徒刑，得併科五萬元以下罰金：一、對於該選舉區內之團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員不行使投票權或為一定之行使者。二、以財物或其他不正利益，行求期約或交付罷免案提議人或連署人，使之不為提議或連署，或為一定之提議或連署者。
+* 91 有左列行為之一者，處五年以下有期徒刑，得併科新臺幣十五萬元以下罰金：一、對於該選舉區內之團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員，不行使投票權或為一定之行使者。二、以財物或其他不正利益，行求期約或交付罷免案提議人或連署人，使之不為提議或連署，或為一定之提議或連署者。
+
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
 
 * 92 意圖使候選人當選或不當選，以文字、圖畫、錄音、錄影、演講或他法，散布謠言或傳播不實之事，足以生損害於公眾或他人者，處五年以下有期徒刑。
 
 > 釋：為端正選風，避免以傳聞不實之謠言，以訛傳訛，或故意歪曲事實，致生損害於公眾或他人，爰將本條所定「散佈虛構事實」修正為「散布謠言或傳播不實之事」，並增列「錄音、錄影或他法」以應實際需要。
 
-* 93 違反第六十一條第二項或第八十一條第二項規定者或有第六十三條第一項各款情事之一經令其退出而不退出者，處二年以下有期徒刑、拘役或二萬元以下罰金。
+* 93 違反第六十一條第二項或第八十一條第二項規定者或有第六十三條第一項各款情事之一經令其退出而不退出者，處二年以下有期徒刑、拘役或新臺幣六萬元以下罰金。
 
-> 釋：配合修正條文第六十一條第二項、第八十一條第二項之修正，明定對亮票者處以刑罰俾端正選風，並增訂選科「拘役」、「罰金」刑。
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
 
-* 94 罷免案之進行有左列情事之一者，在場助勢之人，處一年以下有期徒刑、拘役或一萬元以下罰金；首謀及下手實施者，處五年以下有期徒刑：一、聚眾包圍被罷免人、罷免案提議人、連署人或其辦事人員之服務機關、辦事處或住、居所者。二、以強暴、脅迫或其他非法之方法，妨害被罷免人執行職務或罷免案提議人、連署人或其辦事人員對罷免案之進行者。
+* 94 罷免案之進行有左列情事之一者，在場助勢之人，處一年以下有期徒刑、拘役或新臺幣三萬元以下罰金；首謀及下手實施者，處五年以下有期徒刑：一、聚眾包圍被罷免人、罷免案提議人、連署人或其辦事人員之服務機關、辦事處或住、居所者。二、以強暴、脅迫或其他非法之方法，妨害被罷免人執行職務或罷免案提議人、連署人或其辦事人員對罷免案之進行者。
 
-> 釋：本條係參照刑法第一百五十條規定，將「著手實施」修正為「下手實施」並酌作文字修正。
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰金部分修正以新臺幣為準。
 
 * 95 意圖妨害或擾亂投票、開票而抑留、毀壞、隱匿、調換或奪取投票匭、選舉票、罷免票、選舉人名冊、投票報告表、開票報告表、開票統計或圈選工具者，處五年以下有期徒刑。
 
 > 釋：選舉人意圖妨害或擾亂投票、開票，於領得選票後，如隱藏不投，則產生發出票數與開出票數不一致之結果；若故意將圈選工具隱藏，使他人無圈選工具可用，則影響投票之進行。故此等行為，均應予以處罰，爰增列「隱匿」二字。
 
-* 95.1 競選經費之支出超出選舉委員會依第四十五條之一第一項規定公告之最高限額者，處一萬元以上五萬元以下罰鍰。
+* 95.1 競選經費之支出超出選舉委員會依第四十五條之一第一項規定公告之最高限額者，處新臺幣十萬元以上五十萬元以下之罰鍰。
 
-> 釋：一、本條新增。二、本條規定候選人之競選經費支出超過最高限額之處罰標準，以端正選舉風氣。
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰鍰部分修正以新臺幣為準。
 
-* 96 違反第四十九條第三項、第五十五條第一款或第五十六條第一款之規定，經監察人員制止不聽者，處一年以下有期徒刑。
+* 96 違反第四十九條第三項或第五十六條第一款之規定，經監察人員制止不聽者，處新臺幣一萬元以上五萬元以下罰鍰。
 
-> 釋：一、配合修正條文第四十九條第一項規定意旨，刪除本條引列之「第一項」三字。二、鑒於候選人或其助選員在公辦或私辦政見發表會外，另行公開演講，從事競選活動者，影響競選之公平之秩序，其情節與未經核准自辦政見發表會相同，爰增列違反修正條文第五十五條第一款刑罰之規定。
+> 釋：配合第四十九條之修正條文，爰將「第四十九條第三項」等字修正為「第四十九條第四項」。
 
-* 96.1 政黨違反第五十一條之一第二項、第四項、第五十五條之一第一款或第五十六條第一款之規定，經監察人員制止不聽者，除行為人依前條規定處罰外，處政黨一萬元以上五萬元以下罰鍰。
+* 96.1 政黨違反第五十一條之一第二項、第四項或第五十六條第一款之規定，經監察人員制止不聽者，除行為人依前條規定處罰外，處政黨新臺幣三萬元以上十五萬元以下罰鍰。
 
-> 釋：參照第九十六條規定明定政黨違反第五十一條之二第二項、第四項、第五十五條之一第一款或第五十六條第一款規定之罰則。
+> 釋：依據行政院七十九年七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣為準，而銀元與新臺幣之兌換率為一比三，爰將罰鍰部分修正以新臺幣為準。
 
-* 97 違反第四十五條之三第一項、第二項、第四項、第五十一條第一項、第三項、第五十一條之一第三項之規定或依第四十五條之三第五項所定準則或依第五十一條第二項所定張貼地點、規格等之規定者，處一千元以上一萬元以下罰鍰。違反第五十二條第二項、第三項、第五十五條第二款至第五款、第五十五條之一第二款至第七款、第五十六條第二款至第六款、第七十九條第二項之規定或依第四十六條第二項、第七十九條第三項所定辦法之規定，經監察人員制止不聽者，亦同。將選舉票或罷免票以外之物投入票匭，或將領得之選舉票或罷免票攜出場外，或故意撕毀者，處五百元以上五千元以下罰鍰。
+* 97 違反第四十五條之三第一項、第二項、第四項、第五十一條第一項、第三項、第五十一條之一第三項之規定或依第四十五條之三第五項所定準則或依第五十一條第二項所定張貼地點、規格等之規定者，處新臺幣三千元以上三萬元以下罰鍰。違反第五十二條第二項至第五項、第五十五條、第五十五條之一、第五十六條第二款至第六款、第五十六條之一、第七十九條第二項之規定或依第四十六條第二項、第七十九條第三項所定辦法之規定，經監察人員制止不聽者，亦同。將選舉票或罷免票以外之物投入票匭，或將領得之選舉票或罷免票攜出場外，或故意撕毀者，處新臺幣一千五百元以上一萬五千元以下罰鍰。
 
-> 釋：一、第一項配合第五十一條、第八十八條規定予以修正，並增列違反第五十一條之一及第五十一條之二第二項規定之罰則。二、第二項配合第五十二條、第五十五條、第五十六條規定予以修正，並增列違反第四十六條第二項、第五十五條之一第二款至第七款及第七十九條第二項規定之罰則。
+> 釋：一、依據行政院七十九月七月十八日臺七十九財字第一九六Ｏ一號函規定，現時所訂定或新修正之法律，貨幣單位一律採新臺幣之兌換率為一比三，爰將罰鍰部分修正以新臺幣為準。二、配合第五十一條修正，刪除有關該條第二項、第三項處罰之規定，至於候選人違反修正之第五十一條第二項規定者，依其他相關法規規定處罰。三、第二項增列違反第十六條之一之處罰規定。
 
 * 97.1 （刪除）
 
@@ -344,9 +400,9 @@
 
 * 99 已登記為候選人之現任公務人員，有左列情形之一者，經選舉委員會查明屬實後，通知各該人員之主管機關先行停止其職務，並依法處理：一、無正當理由拒絕選舉委員會請協辦事項或請派人員者。二、干涉選舉委員會人事或業務者。三、藉名動用或挪用公款作競選之費用者。四、要求有部屬或有指揮、監督關係之團體暨各該團體負責人作競選之支持者。五、利用職權無故調動人員，對競選預作人事上之安排者。
 
-* 100 中央公職人員選舉，由最高法院檢察署檢察長督率各級檢察官；地方公職人員選舉，由該管法院檢察處首席檢察官督率所屬檢察官，分區查察，自動檢舉有關妨害選舉、罷免之刑事案件，並接受機關、團體或人民是類案件之告發、告訴、自首，即時開始偵查，為必要之處理。前項案件之偵查，檢察官得依刑事訴訟法及調度司法警察條例等規定，指揮司法警察人員為之。
+* 100 中央公職人員選舉，由最高法院檢察署檢察總長督率各級檢察官；地方公職人員選舉，由該管法院檢察署檢察長督率所屬檢察官，分區查察，自動檢舉有關妨害選舉、罷免之刑事案件，並接受機關、團體或人民是類案件之告發、告訴、自首，即時開始偵查，為必要之處理。前項案件之偵查，檢察官得依刑事訴訟法及調度司法警察條例等規定，指揮司法警察人員為之。
 
-> 釋：一、第一項文字修正，於「首席檢察官」之上加「檢察處」三字。二、第二項後段增訂對司法警察人員之特別規定，促其注意，自動執行職務，加強其責任。
+> 釋：配合法院組織法有關條文之修正，將第一項中最高法院檢察署「檢察長」修正為「檢察總長」，該管法院「檢察處首席檢察官」修正為「檢察署檢察長」。
 
 * 101 選舉委員會辦理選舉、罷免違法，足以影響選舉或罷免結果，檢察官、候選人、被罷免人或罷免案提議人，得自當選人名單或罷免投票結果公告之日起十五日內，以各該選舉委員會為被告，向管轄法院提起選舉或罷免無效之訴。
 
@@ -354,9 +410,9 @@
 
 * 102 選舉或罷免無效之訴，經法院判決無效確定者，其選舉或罷免無效，并定期重行選舉或罷免。其違法屬選舉或罷免之局部者，局部之選舉或罷免無效，並就該局部無效部分定期重行投票。但局部無效部分顯不足以影響選舉或罷免結果者，不在此限。
 
-* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、當選票數不實，足以影響選舉結果者。二、違反第四十九條第三項或第五十五條第一款及第三款之規定，經監察人員書面制止不聽者。
+* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、當選票數不實，足以影響選舉結果者。二、違反第四十九條第三項之規定，經監察人員書面制止不聽者。
 
-> 釋：第二款配合第五十五條之修正予以修正。
+> 釋：配合第四十九條之修正，爰修正現行法第二款。
 
 * 103.1 當選人有第三十六條各款規定情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，於其任期或規定之日期屆滿前，向該管轄法院提起當選無效之訴。
 
