民事訴訟法 1991.10.6

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -60,6 +60,8 @@
 
 * 31 移送訴訟之裁定確定時，視為該訴訟自始即繫屬於受移送之法院。前項情形，法院書記官應速將裁定正本附入卷宗，送交受移送之法院。
 
+* 31.3 其他法院將訴訟移送至普通法院者，依本法定其訴訟費用之徵收。移送前所生之訴訟費用視為普通法院訴訟費用之一部分。應行徵收之訴訟費用，其他法院未加徵收、徵收不足額或溢收者，普通法院應補行徵收或通知原收款法院退還溢收部分。
+
 * 32 推事有左列各款情形之一者，應自行迴避，不得執行職務：一、推事或其配偶、前配偶或未婚配偶，為該訴訟事件當事人者。二、推事為該訴訟事件當事人、八親等內之血親、或五親等內之姻親，或曾有此親屬關係者。三、推事或其配偶、前配偶或未婚配偶，就該訴訟事件與當事人有共同權利人，共同義務人或償還義務人之關係者。四、推事現為或曾為該訴訟事件當事人之法定代理人或家長、家屬者。五、推事於該訴訟事件，現為或曾為當事人之訴訟代理人或輔佐人者。六、推事於該訴訟事件，曾為證人或鑑定人者。七、推事曾參與該訴訟事件之前審裁判、更審前之裁判或仲裁者。
 
 > 釋：第七款「公斷」二字刪除。
